# termination

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
src/termination/: __init__.py  orderings.py  pools.py  signatures.py  terms.py
termination/: __init__.py  arity.py  comparable.py  symbol.py  symbols.py  term.py  terms.py  variable.py  variables.py
tests/: __init__.py  conftest.py  test_pools.py  test_signatures.py  test_terms.py
